[gd_scene load_steps=3 format=3 uid="uid://8vvx43vtulw5"]

[ext_resource type="Script" uid="uid://svh6y8okcup5" path="res://script/title.gd" id="1_4fdtc"]
[ext_resource type="Theme" uid="uid://em0nibpopl3n" path="res://theme/theme.tres" id="2_hr6ky"]

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4fdtc")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_hr6ky")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 1552.0
offset_bottom = 72.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "wave:"

[node name="waveLabel" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "hp"

[node name="hpLabel" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "10"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "money:"

[node name="moneyLabel" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "0"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "score:"

[node name="scoreLabel" type="Label" parent="Control/PanelContainer/HBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Button" type="Button" parent="Control/PanelContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "speed"

[node name="Button2" type="Button" parent="Control/PanelContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "pause"

[node name="Button3" type="Button" parent="Control/PanelContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "sound"

[node name="Button4" type="Button" parent="Control/PanelContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "sfx"

[node name="Button5" type="Button" parent="Control/PanelContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "menu"
